[package]
name = "spectra-proxy"
version = "0.1.0"
edition = "2024"
authors = ["Fantros root@fantros.com"]
license = "MIT"
repository = "https://github.com/fantros/spectra-proxy"
homepage = "https://fantros.com"
keywords = ["proxy", "http", "https", "reverse-proxy", "load-balancer"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bytes = "1.5"
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"
rustls-pemfile = "2.2"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls-acme = { version = "0.10", features = ["tokio"] }
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
